# snow_globe

./: CMakeLists.txt  README.md
resource/: globe.txt
src/: main.c  snow_globe.c  snow_globe.h
